# pico-traffic-light

./: .clang-format  CMakeLists.txt  CMakeLists_build.txt  README.md
run/: build.sh  copy.sh  init.sh  start.sh  test-hook.sh  test.sh
run/python/: test-hook.py  test-watcher.py
src/: System.cpp  System.hpp  factorial.cpp  main.cpp  tests.cpp
src/addition/: addition.cpp  addition.hpp  addition.test.cpp
src/factorial/: factorial.test.cpp
src/pico_w/: GPIOWriter.hpp  IWriter.hpp  OnboardLEDWriter.cpp  OnboardLEDWriter.hpp  PicoW.cpp  PicoW.hpp  gpio_writer.cpp  pico_w.cpp  pico_w.hpp
src/pico_w/reader/: IReader.hpp
src/pico_w/reader/bootsel_button_reader/: BootselButtonReader.cpp  BootselButtonReader.hpp
src/pico_w/writer/gpio_writer/: GPIOWriter.cpp  GPIOWriter.hpp
src/pico_w/writer/onboard_led_writer/: OnboardLEDWriter.cpp  OnboardLEDWriter.hpp
src/pico_w_pedestrian_crossing_system/: PicoWPedestrianCrossingSystem.hpp
src/substraction/: substraction.cpp  substraction.hpp  substraction.test.cpp
src/traffic_control/: vehicle_traffic_light.hpp
src/traffic_control/aspect/: Aspect.hpp  Aspect.test.cpp
src/traffic_control/aspect/flasher/: Flasher.hpp  Flasher.test.cpp
src/traffic_control/pedestrian_crossing_system/: PedestrianCrossingSystem.cpp  PedestrianCrossingSystem.hpp  PedestrianCrossingSystem.test.cpp
src/traffic_control/pedestrian_crossing_system/cycle_phases/pedestrian_cycle_phase/: IPedestrianCyclePhase.hpp  PedestrianCyclePhase.cpp  PedestrianCyclePhase.hpp  PedestrianCyclePhase.test.cpp
src/traffic_control/pedestrian_crossing_system/cycle_phases/phase_steps/: PhaseSteps.cpp  PhaseSteps.hpp  PhaseSteps.test.cpp
src/traffic_control/pedestrian_crossing_system/cycle_phases/vehicular_cycle_phase/: IVehicularCyclePhase.hpp  VehicularCyclePhase.cpp  VehicularCyclePhase.hpp  VehicularCyclePhase.test.cpp
src/traffic_control/pedestrian_crossing_system/phase_steps/: PhaseStep.cpp  PhaseStep.hpp  PhaseStep.test.cpp  PhaseSteps.cpp  PhaseSteps.hpp  PhaseSteps.test.cpp
src/traffic_control/pedestrian_crossing_system/phases/pedestrian_cycle_phase/: PedestrianCyclePhase.cpp  PedestrianCyclePhase.hpp  PedestrianCyclePhase.test.cpp
src/traffic_control/pedestrian_crossing_system/phases/vehicular_cycle_phase/: VehicularCyclePhase.cpp  VehicularCyclePhase.hpp  VehicularCyclePhase.test.cpp
src/traffic_control/physical_components/push_button/: IPushButton.hpp  PushButton.cpp
src/traffic_control/physical_components/signal_head/aspect/: Aspect.hpp  Aspect.test.cpp
src/traffic_control/physical_components/signal_head/aspect/flasher/: Flasher.cpp
src/traffic_control/physical_components/signal_head/pedestrian_signal_head/: IPedestrianSignalHead.hpp  PedestrianSignalHead.cpp  PedestrianSignalHead.hpp  PedestrianSignalHead.test.cpp
src/traffic_control/physical_components/signal_head/vehicular_traffic_signal_head/: IVehicularTrafficSignalHead.hpp  VehicularTrafficSignalHead.cpp  VehicularTrafficSignalHead.hpp
src/traffic_control/push_button/: PushButton.hpp
src/traffic_control/signal_head/aspect/: Aspect.cpp  Aspect.hpp  Aspect.test.cpp
src/traffic_control/signal_head/aspect/flasher/: Flasher.hpp
src/traffic_control/signal_head/pedestrian_signal_head/: IPedestrianSignalHead.hpp  PedestrianSignalHead.cpp  PedestrianSignalHead.hpp  PedestrianSignalHead.test.cpp
src/traffic_control/signal_head/vehicular_traffic_signal_head/: IVehicularTrafficSignalHead.hpp  VehicularTrafficSignalHead.cpp  VehicularTrafficSignalHead.hpp  VehicularTrafficSignalHead.test.cpp
